# HFT_Trade_CLI

HFT_trading_CLI/: CMakeLists.txt  README.md  api_credentials.h  deribit_trader.cpp  latency_module.cpp  latency_module.h  trade_execution.cpp  trade_execution.h  websocket_handler.cpp  websocket_handler.h
